--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "skyway-js": "^4.4.4",
